# automation-database-manager

./: .gitignore  README.md  constants.py  db_manager.py  main.py  models.py  pyproject.toml  requirements.txt
py-db-inserter/: README.md  pyproject.toml  setup.cfg
py-db-inserter/examples/: simple_usage.py
py-db-inserter/src/db_inserter/: __init__.py  config.py  connection.py  exceptions.py  history.py  keys.py  operations.py
py-db-inserter/tests/: test_history.py  test_operations.py
src/db-manager/: manager.py
src/db_manager/: __init__.py  dataframe.py  manager.py
src/rpa_db_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
