[tool.poetry]
name = "py-db-inserter"
version = "0.1.0"
description = "A Python library for encapsulating database insertion logic, including history maintenance and key management."
authors = ["Seu Nome <seu.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seu_usuario/py-db-inserter"
repository = "https://github.com/seu_usuario/py-db-inserter"
keywords = ["database", "insertion", "history", "keys"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4"
pandas = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"