[metadata]
name = py-db-inserter
version = 0.0.1
description = A Python library created to quickly integrate automations with databases.
author = Ausier Neto
author_email = ausierneto@gmail.com
url = https://github.com/AusierNeto/py-db-inserter
license = MIT

[options]
packages = find:
install_requires =
    sqlalchemy
    psycopg2-binary  # or any other database driver you need

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*